Fix spacing issue

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,6 +14,11 @@ nav {
 
 #bolded {
   font-weight: bold;
+  margin: 0.13em;
+}
+
+#regular {
+  margin: 0.13em;
 }
 
 p {
